adds switch to android development build

--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuild.mdx
@@ -1,10 +1,14 @@
 import { Step } from '~/ui/components/Step';
 import { Terminal } from '~/ui/components/Snippet';
 
+import { BuildEnvironmentSwitch } from '../BuildEnvironmentSwitch';
+
 import AndroidStudioInstructions from './_androidStudioInstructions.mdx';
 import AndroidEmulatorInstructions from './_androidEmulatorInstructions.mdx';
 
 ## Set up an Android Emulator with a development build
+
+<BuildEnvironmentSwitch type="android-studio" />
 
 <AndroidStudioInstructions />
 <AndroidEmulatorInstructions />
