adds ios local instructions

--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidPhysicalDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidPhysicalDevelopmentBuild.mdx
@@ -5,7 +5,7 @@ import { BuildEnvironmentSwitch } from '../BuildEnvironmentSwitch';
 
 ## Set up an Android device with a development build
 
-<BuildEnvironmentSwitch type="android-studio" />
+<BuildEnvironmentSwitch />
 
 <Step label="1">
 
