--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuild.mdx
@@ -8,7 +8,7 @@ import AndroidEmulatorInstructions from './_androidEmulatorInstructions.mdx';
 
 ## Set up an Android Emulator with a development build
 
-<BuildEnvironmentSwitch type="android-studio" />
+<BuildEnvironmentSwitch />
 
 <AndroidStudioInstructions />
 <AndroidEmulatorInstructions />
