--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedDevelopmentBuild.mdx
@@ -3,13 +3,15 @@ import { Step } from '~/ui/components/Step';
 import { Terminal } from '~/ui/components/Snippet';
 
 import { BuildEnvironmentSwitch } from '../BuildEnvironmentSwitch';
-import IosSimlatorInstructions from './_iosSimulatorInstructions.mdx';
+import XcodeInstructions from './_xcodeInstructions.mdx';
 
-## iOS Simulator with a development build
+## Set up an iOS Simulator with a development build
 
-<BuildEnvironmentSwitch type="xcode" />
+<BuildEnvironmentSwitch />
 
-<IosSimlatorInstructions />
+## Set up Xcode
+
+<XcodeInstructions />
 
 ## Create a development build
 
