--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedExpoGo.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedExpoGo.mdx
@@ -1,8 +1,10 @@
-import IosSimlatorInstructions from './_iosSimulatorInstructions.mdx';
+import XcodeInstructions from './_xcodeInstructions.mdx';
 
-## iOS Simulator with Expo Go
+## Set up an iOS Simulator with Expo Go
 
-<IosSimlatorInstructions />
+## Set up Xcode
+
+<XcodeInstructions />
 
 ## Install Expo Go
 
