--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidPhysicalExpoGo.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidPhysicalExpoGo.mdx
@@ -1,6 +1,6 @@
 import QRCodeReact from 'react-qr-code';
 
-## Android device with Expo Go
+## Set up an Android device with Expo Go
 
 Scan the QR code to download the app from the Google Play Store, or visit the Expo Go page on the [Google Play Store](https://play.google.com/store/apps/details?id=host.exp.exponent&referrer=docs).
 
