--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuildLocal.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuildLocal.mdx
@@ -1,13 +1,15 @@
 import { Terminal } from '~/ui/components/Snippet';
+import { Step } from '~/ui/components/Step';
 
 import { BuildEnvironmentSwitch } from '../BuildEnvironmentSwitch';
+
 import AndroidStudioEnvironmentInstructions from './_androidStudioEnvironmentInstructions.mdx';
 import AndroidStudioInstructions from './_androidStudioInstructions.mdx';
 import AndroidEmulatorInstructions from './_androidEmulatorInstructions.mdx';
 
-## Set up an Android device with a development build
+## Set up an Android Emulator with a development build
 
-<BuildEnvironmentSwitch type="android-studio" />
+<BuildEnvironmentSwitch />
 
 <AndroidStudioEnvironmentInstructions />
 
@@ -15,10 +17,24 @@ import AndroidEmulatorInstructions from './_androidEmulatorInstructions.mdx';
 
 <AndroidEmulatorInstructions />
 
-## Running your app on an Android device
+## Running your app on an Android Emulator
+
+<Step label="1">
+
+### Install expo-dev-client
+
+Run the following command in your project's root directory:
+
+<Terminal cmd={['$ npx expo install expo-dev-client']} />
+
+</Step>
+
+<Step label="2">
 
 Run the following from your terminal:
 
 <Terminal cmd={['$ npx expo run:android']} />
 
 > This command runs a development server after building your app. You can skip running `npx expo start` on the next page.
+
+</Step>
