--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosPhysicalDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosPhysicalDevelopmentBuild.mdx
@@ -5,7 +5,7 @@ import { BuildEnvironmentSwitch } from '../BuildEnvironmentSwitch';
 
 ## Set up an iOS device with a development build
 
-<BuildEnvironmentSwitch type="xcode" />
+<BuildEnvironmentSwitch />
 
 <Step label="1">
 ### Enroll in the Apple Developer Program
