--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedDevelopmentBuildLocal.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedDevelopmentBuildLocal.mdx
@@ -3,10 +3,34 @@ import { Step } from '~/ui/components/Step';
 import { Terminal } from '~/ui/components/Snippet';
 
 import { BuildEnvironmentSwitch } from '../BuildEnvironmentSwitch';
-import IosSimlatorInstructions from './_iosSimulatorInstructions.mdx';
+import XcodeInstructions from './_xcodeInstructions.mdx';
 
-## iOS Simulator with a development build
+## Set up an iOS Simulator with a development build
 
-<BuildEnvironmentSwitch type="xcode" />
+<BuildEnvironmentSwitch />
 
-### TODO
+## Set up Xcode
+
+<XcodeInstructions />
+
+## Running your app on an iOS Simulator
+
+<Step label="1">
+
+### Install expo-dev-client
+
+Run the following command in your project's root directory:
+
+<Terminal cmd={['$ npx expo install expo-dev-client']} />
+
+</Step>
+
+<Step label="2">
+
+Run the following from your terminal:
+
+<Terminal cmd={['$ npx expo run:ios']} />
+
+> This command runs a development server after building your app. You can skip running `npx expo start` on the next page.
+
+</Step>
