remove box link

--- a/docs/pages/get-started/introduction.mdx
+++ b/docs/pages/get-started/introduction.mdx
@@ -19,9 +19,4 @@ We also make [Expo Application Services (EAS)](https://expo.dev/eas), a set of s
 
 {/* <BoxLink title="Automated" description="Automate the process of creating a project, setting up your development environment, and configuring automations." href="https://expo.new" Icon={Earth01Icon} /> */}
 
-<BoxLink
-  title="Quick start"
-  description="Read the docs to create a project and set up your development environment."
-  href="/get-started/create-a-project/"
-  Icon={BookOpen02Icon}
-/>
+{/* <BoxLink title="Quick start" description="Read the docs to create a project and set up your development environment." href="/get-started/create-a-project/" Icon={BookOpen02Icon} /> */}
